force-app/main/default/objects/Duplicate_Candidate__c/Duplicate_Candidate__c.object-meta.xml
<CustomObject>
    <description>Central output object for the 5-Tier Deduplication Pipeline. Tracks duplicate article pairs from detection through resolution or rejection. Replaces Knowledge_Audit_Flag__c for dedup-specific workflows.</description>
    <label>Duplicate Candidate</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>