force-app/main/default/objects/Duplicate_Candidate__c/fields/AI_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning__c</fullName>
    <description>AI-generated reasoning for why these articles are considered duplicates/conflicts, or the source tier description for exact matches.</description>
    <label>AI Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>