force-app/main/default/objects/Duplicate_Candidate__c/fields/Article_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_1_Title__c</fullName>
    <description>Denormalized title of Article 1 for list view display without requiring a join to Knowledge__kav.</description>
    <label>Article 1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>