force-app/main/default/objects/Duplicate_Candidate__c/fields/Assessment_Run__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Run__c</fullName>
    <description>Assessment run that produced this candidate record. Master-detail: the candidate is owned/visible via its run, and cascade-deletes with it.</description>
    <label>Assessment Run</label>
    <referenceTo>KB_Assessment_Run__c</referenceTo>
    <relationshipLabel>Duplicate Candidates</relationshipLabel>
    <relationshipName>Duplicate_Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>