force-app/main/default/objects/Duplicate_Candidate__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Confidence score 0-100. Tier 1 exact matches = 100. Tier 4 deep analysis = LLM-assessed score.</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>