force-app/main/default/objects/Duplicate_Candidate__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <description>The type of anomaly detected: Duplicate (same problem, same solution) or Contradiction (same topic, conflicting info). Partial overlaps are either flagged as Duplicate (near-twins) or not flagged; the Data Cloud similarity threshold governs breadth. 'Enrichment' is used by the enrichment flow.</description>
    <label>Flag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Contradiction</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>