force-app/main/default/objects/Duplicate_Candidate__c/fields/Knowledge_Article_2__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_2__c</fullName>
    <description>KnowledgeArticleVersion Id of the second article in the duplicate pair.</description>
    <label>Knowledge Article 2</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>