force-app/main/default/objects/Duplicate_Candidate__c/fields/Knowledge_Article_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id_2__c</fullName>
    <description>Article-level (KnowledgeArticleId) of the second article in the duplicate pair. Used by KBDuplicateCandidateReconciler to detect when a different version is published manually.</description>
    <externalId>true</externalId>
    <label>Knowledge Article Id 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>