force-app/main/default/objects/Duplicate_Candidate__c/fields/Merge_Error__c.field-meta.xml
<CustomField>
    <fullName>Merge_Error__c</fullName>
    <description>Populated when an approved merge fails (Status = Error): the actionable reason, e.g. a newer draft exists (re-run the assessment), missing field-level security, or missing Knowledge article-management permission. Cleared/overwritten on the next merge attempt. Surfaced on the Duplicates queue so the failure is visible rather than only on the async job.</description>
    <label>Merge Error</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>