force-app/main/default/objects/Duplicate_Candidate__c/fields/Merged_Article__c.field-meta.xml
<CustomField>
    <fullName>Merged_Article__c</fullName>
    <description>The KnowledgeArticleVersion Id of the Golden Record article created by consolidation.</description>
    <label>Merged Article</label>
    <length>18</length>
    <type>Text</type>
</CustomField>