force-app/main/default/objects/Duplicate_Candidate__c/fields/Merged_Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Merged_Knowledge_Article_Id__c</fullName>
    <description>Article-level (KnowledgeArticleId) of the Golden Record draft. Used by KBDuplicateCandidateReconciler to detect when the merged article is published manually.</description>
    <externalId>true</externalId>
    <label>Merged Knowledge Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>