force-app/main/default/objects/Duplicate_Candidate__c/fields/Pipeline_Run__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run__c</fullName>
    <description>Pipeline run that produced this candidate.</description>
    <label>Pipeline Run</label>
    <referenceTo>KB_Pipeline_Run__c</referenceTo>
    <relationshipLabel>Duplicate Candidates</relationshipLabel>
    <relationshipName>Pipeline_Duplicate_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>