force-app/main/default/objects/Duplicate_Candidate__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Human-provided reason for rejecting this duplicate candidate. Serves as a training signal for future prompt tuning.</description>
    <label>Rejection Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>