force-app/main/default/objects/Duplicate_Candidate__c/fields/Score_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Score_Calculated_Date__c</fullName>
    <description>When the confidence score was last calculated.</description>
    <label>Score Calculated Date</label>
    <type>DateTime</type>
</CustomField>