force-app/main/default/objects/Duplicate_Candidate__c/fields/Source_Tier__c.field-meta.xml
<CustomField>
    <fullName>Source_Tier__c</fullName>
    <description>Which tier of the deduplication pipeline produced this candidate.</description>
    <label>Source Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier1_ExactMatch</fullName>
                <label>Tier 1: Exact Match</label>
            </value>
            <value>
                <fullName>Tier4_Agentic</fullName>
                <label>Tier 4: Agentic Analysis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>