force-app/main/default/objects/Duplicate_Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status. Pending = awaiting action. Resolved = merged. Error = an approved merge failed (see Merge_Error__c for why) — the pair stays actionable so the user can fix the cause and retry. Not a Duplicate = human marked the pair as not a duplicate/conflict; soft / this-run-only — the pair is re-evaluated and can re-surface on the next assessment. Rejected / Suppressed = terminal discards (permanent; no longer written by the app, retained for older rows). Superseded = a different version of one of the linked articles was published outside the app's flow.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Not a Duplicate</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>